# json-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/json/: json.h
sandbox/: CMakeLists.txt  test.txt  tony.json
sandbox/src/: CMakeLists.txt  main.c
src/: CMakeLists.txt  file-utils.c  file-utils.h  json.c  json.h  main.c  parser.c  parser.h  public.c
